components/new-api/new-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-api
  namespace: new-api
  labels:
    app: new-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-api
  template:
    metadata:
      labels:
        app: new-api
    spec:
      containers:
        - name: new-api
          image: calciumion/new-api:latest
          args:
            - --log-dir
            - /app/logs
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: new-api/data
            - name: data
              mountPath: /app/logs
              subPath: new-api/logs
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: shared-nfs
